fix port card spacing

--- a/src/pages/portfolio/Portfolio.css
+++ b/src/pages/portfolio/Portfolio.css
@@ -25,7 +25,7 @@
     flex-wrap:wrap;
     width: 400px;
     min-width: 400px;
-    height:350px;
+    height: 350px;
     border: solid lightgray;
     margin: 10px;
     align-items: center;
@@ -126,8 +126,8 @@
  .weath-head {
     display: flex;
     flex-direction: column;
-    margin-top: 48%;
-    margin-bottom: 5%;       
+    margin-top: 40%;
+    margin-bottom: 3%;       
 }
 
 .weath-icons {
@@ -167,7 +167,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 55%;
+    margin-top: 45%;
     margin-bottom: 10%;
     padding-left: 45px;  
     color: black;  
@@ -198,7 +198,7 @@
 
  .code-head {
     margin-top: 55%;
-    margin-bottom: 15%;
+    margin-bottom: 5%;
     color: darkred;
  }
 
